# labbie

./: .gitignore  DEVELOPING.md  README.md  TODO.md  package.py  pyproject.toml
config/: config.toml  constants.toml
labbie/: entry_point.py  package.py  pyproject.toml
labbie/config/: config.toml
labbie/src/labbie/: __init__.py  __main__.py  bounds.py  config.py  constants.py  enchants.py  ipc.py  mods.py  ocr.py  resources.py  utils.py  version.py
labbie/src/labbie/ui/: base.py  checkable_combo.py  clickable_label.py  fuzzy_combo.py  hotkey.py  keys.py  switch.py  transparent_window.py  utils.py  vertical_tabs.py
labbie/src/labbie/ui/about/widget/: presenter.py  view.py
labbie/src/labbie/ui/about/window/: presenter.py  view.py
labbie/src/labbie/ui/app/: presenter.py
labbie/src/labbie/ui/buy_list/widget/: view.py
labbie/src/labbie/ui/error/widget/: view.py
labbie/src/labbie/ui/error/window/: presenter.py  view.py
labbie/src/labbie/ui/main/widget/: presenter.py  view.py
labbie/src/labbie/ui/main/window/: presenter.py  view.py
labbie/src/labbie/ui/result/widget/: view.py
labbie/src/labbie/ui/screen_selection/widget/: view.py
labbie/src/labbie/ui/search/widget/: view.py
labbie/src/labbie/ui/search/window/: view.py
labbie/src/labbie/ui/settings/widget/: presenter.py  view.py
labbie/src/labbie/ui/settings/window/: presenter.py  view.py
labbie/src/labbie/ui/system_tray/: presenter.py  view.py
labbie/src/labbie/ui/update/: presenter.py  view.py
labbie/tests/: conftest.py  test_labbie.py  test_ocr.py
labbie/tests/test_data/p0/: expected.toml
labbie/tests/test_data/p1/: expected.toml
labbie/tests/test_data/p2/: expected.toml
labbie/tests/test_data/three_line_enchant/: expected.toml
package/: LICENSE  README.md  pyproject.toml
package/src/package/: __main__.py  deploy.py  package.py  utils.py
src/labbie/: __main__.py  bases.py  config.py  constants.py  enchants.py  errors.py  mixins.py  mods.py  ocr.py  resources.py  result.py  sentinels.py  state.py  trade.py  utils.py
src/labbie/di/: module.py
src/labbie/ui/: base.py  checkable_combo.py  hotkey.py  keys.py  switch.py  transparent_window.py  utils.py
src/labbie/ui/about/widget/: presenter.py  view.py
src/labbie/ui/about/window/: view.py
src/labbie/ui/app/: presenter.py
src/labbie/ui/error/widget/: presenter.py  view.py
src/labbie/ui/error/window/: view.py
src/labbie/ui/result/widget/: presenter.py  view.py
src/labbie/ui/screen_selection/widget/: view.py
src/labbie/ui/search/widget/: presenter.py  view.py
src/labbie/ui/search/window/: presenter.py  view.py
src/labbie/ui/settings/widget/: presenter.py  view.py
src/labbie/ui/settings/window/: presenter.py  view.py
src/labbie/ui/system_tray/: presenter.py  view.py
tests/: conftest.py  test_labbie.py  test_ocr.py
updater/: README.md  entry_point.py  package.py  pyproject.toml
updater/repo/metadata/current/: 1.root.json
updater/repo/metadata/previous/: 1.root.json  snapshot.json  targets.json  timestamp.json
updater/src/updater/: __init__.py  __main__.py  components.py  config.py  constants.py  diff_utils.py  errors.py  patch.py  paths.py  signals.py  utils.py  version.py  versions.py
updater/src/updater/ui/: update_window.py
updater/tests/: test_updater.py
