[tool.poetry]
name = "labbie"
version = "0.1.0"
description = "Lab enchant assistant"
authors = ["Brandon Norick <b.norick@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
aiohttp = "^3.8.0"
PyQt5 = "^5.15.6"
qasync = "^0.22.0"
pytesseract = "^0.3.8"
Pillow = "^8.4.0"
injector = "^0.18.4"
loguru = "^0.5.3"
keyboard = "^0.13.5"
dacite = "^1.6.0"
toml = "^0.10.2"
orjson = "^3.6.4"
numpy = "^1.21.4"
opencv-python-headless = "^4.5.4"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
cx-Freeze = "^6.8.1"

[tool.poetry.scripts]
labbie = "labbie.__main__:main"
package = "package:package"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
