[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Brandon Norick <b.norick@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
cx-Freeze = "^6.8.2"
labbie = { path = "../labbie", develop = true }
updater = { path = "../updater", develop = true }
labbie_admin = { path = "../../labbie_admin", develop = true, optional = true }
typer = "^0.4.0"
pywin32 = "^302"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
build = "package.__main__:build"
deploy = "package.__main__:deploy_"

[tool.poetry.extras]
deploy = ["labbie_admin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
